src/components/app.css
.app {
  display: grid;
  grid-template-rows: max-content 1fr max-content;
}

.header,
.header-nav,
.header-nav-content,
.header-topbar,
.header-topbar-content,
.main,
.footer,
.footer-content,
.page {
  box-sizing: border-box;
  position: relative;
}
.page {
  align-content: flex-start;
  display: flex;
  flex-wrap: var(--page-column-wrap);
  gap: var(--section-gap);
}
.page section.primary {
  width: var(--page-column-width);
}
.page section.secondary {
  border-left: var(--column-divider);
  padding-left: var(--column-gap);
}

.header,
.header-nav-content,
.header-topbar-content,
.footer-content {
  display: grid;
}
.header-nav,
.header-topbar,
.footer,
.main {
  display: grid;
  justify-items: center;
}

.header-nav-content,
.header-topbar-content,
.footer-content,
.page {
  max-width: var(--max-page-width);
  width: var(--page-width);
}
.elementor-section {
  display: flex;
  justify-content: center;
}
.elementor-container {
  display: flex;
  justify-content: center;
  margin-left: 0 !important;
  margin-right: 0 !important;
  /* max-width: var(--max-page-width) !important; */
  max-width: 1140px !important;
  /* width: var(--page-width); */
  /* width: 100% !important; */
}
.elementor-row {
  /* width: 90% !important; */
  width: 100% !important;
}
.elementor-column {
  padding: 10px;
}
@media only screen and (max-width: 767px) {
  .elementor-row > .elementor-column.collapse-for-medium-and-under {
    margin: 0;
    padding: 0;
  }
}

.footer-content,
.header-topbar-content > a,
.header-nav-links > a,
.services-popper-label,
.menu-button,
.page {
  padding: var(--gap);
}
.page {
  height: 100%;
  padding-bottom: var(--page-gap);
  padding-top: var(--page-gap);
}
@media only screen and (max-width: 767px) {
  .header-topbar {
    padding: 12px 0;
  }
  .header-topbar-content {
    justify-content: center;
  }
}

.header-nav {
  background-color: var(--white);
}
.header-nav-content {
  grid-template-columns: max-content 1fr;
  grid-template-rows: max-content;
}
.header-topbar {
  border-bottom: 1px solid var(--light-green);
}
.header-topbar-content {
  grid-template-columns: repeat(2, max-content);
  /* grid-template-columns: max-content max-content var(--theme-toggle-width); */
  z-index: 100;
}
/* @media screen and (width < 767px) {
  .header-topbar {
    justify-content: center;
  }
} */
.header-topbar-content > a {
  align-items: center;
  color: inherit;
  display: flex;
  flex-wrap: nowrap;
  gap: 8px;
  position: relative;
  text-decoration: none;
}
.header-topbar-content > a:before {
  backdrop-filter: var(--filter);
  border-radius: 19px;
  bottom: calc(var(--gap) - 3px);
  content: '';
  left: 2px;
  opacity: 0;
  position: absolute;
  right: 2px;
  top: calc(var(--gap) - 3px);
  transition: var(--transition-opacity);
  z-index: -1;
}
.header-topbar-content > a:hover {
  color: inherit;
}
/* .header-topbar-content > a:hover:before {
  opacity: 1;
} */

.footer {
  border-top: 1px solid var(--light-green);
}
.footer-content {
  text-align: center;
}
.header-topbar,
.footer {
  background-color: var(--original-green);
  color: var(--white);
  font-size: 14px;
  font-weight: 400;
  line-height: var(--line-height);
}

#theme-toggle-label {
  align-items: center;
  aspect-ratio: 1 / 1;
  cursor: pointer;
  display: grid;
  height: 100%;
  justify-items: center;
  position: absolute;
  right: 0;
  z-index: 300;
}
#theme-toggle-label svg {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}

/* type selectors */
body {
  font-family: 'Open Sans';
  line-height: 28px;
}
a {
  color: var(--text-color);
  cursor: pointer;
  text-decoration: none;
  transition: var(--transition-color);
}
svg {
  box-sizing: border-box;
  color: var(--white);
  height: var(--icon-size);
  overflow: visible;
  width: var(--icon-size);
}
svg:focus {
  outline: none;
}
ul.list li {
  margin-bottom: 8px;
  padding-left: 3px;
}

.page section,
.page p {
  margin: var(--line-margin);
}
p {
  /* color: var(--text-color); */
  font-family: 'Open Sans';
  font-feature-settings: normal;
  font-kerning: auto;
  font-optical-sizing: auto;
  /* font-size: 16px; */
  font-size: 100%;
  font-size-adjust: none;
  -webkit-font-smoothing: antialiased;
  font-stretch: 100%;
  font-style: normal;
  /* font-variation-settings: 'wdth' 100; */
  /* Use a value from 100 to 900 */
  font-weight: inherit;
}
.bold {
  font-weight: bold;
}
.content-header {
  display: block;
  font-weight: 600;
  margin-bottom: 2px;
}
.page-title {
  color: #333333;
  font-family: 'Philosopher';
  font-size: 26px;
  line-height: 36px;
  margin: var(--line-margin);
}
.section-title {
  border-left: 3px solid var(--original-green);
  color: #333333;
  font-family: 'Philosopher';
  font-size: 18px;
  letter-spacing: 1px;
  line-height: 18px;
  margin: var(--line-margin);
  padding-left: 15px;
  text-transform: uppercase;
}
.section-header {
  color: #333333;
  font-family: 'Philosopher';
  font-size: 20px;
  font-weight: 600;
  line-height: 28px;
  margin: var(--line-margin);
}
.title {
  color: #000000;
  font-size: 22px;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 39px;
  margin-bottom: 15px;
}
.card-title {
  color: #5e5e5e;
  font-family: 'Philosopher';
  font-size: 18px;
  font-weight: 500;
  letter-spacing: normal;
  line-height: 28px;
  padding: 5px;
}
.gallery-title {
  color: #333333;
  font-family: 'Philosopher';
  font-size: 18px;
  padding: 10px;
  text-align: center;
}
.gallery-buttons {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
}
.gallery-title + .gallery-title {
  border-left: 1px solid var(--divider-color);
}
@media screen and (width < 500px) {
  .gallery-title {
    font-size: 15px;
    padding: 5px;
  }
}

p.image {
  display: flex;
  justify-content: center;
  width: 100%;
}
p.image .inline-image {
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 3px 6px,
    rgba(0, 0, 0, 0.23) 0px 3px 6px;
  /* background-color: #eeeeee; */
  /* border: 1px solid #dddddd; */
  padding: 5px;
}

.testimonials {
  display: flex;
  flex-direction: column;
  gap: var(--section-gap);
  padding: var(--section-gap) 0px;
}

.testimonial {
  background: linear-gradient(to bottom, #fbfbfb 0%, #ededed 100%);
  border-radius: 5px;
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 3px 6px,
    rgba(0, 0, 0, 0.23) 0px 3px 6px;
  display: grid;
  gap: 15px;
  grid-template-columns: max-content 1fr max-content;
  margin: 0px 36px;
  padding: 15px;
}
@media screen and (width < 500px) {
  .testimonial {
    gap: 10px;
    margin: 0px 0px;
    padding: 10px;
  }
}
.testimonial p {
  color: #666666;
  font-style: italic;
  line-height: 36px;
  padding-top: 15px;
}
.testimonial svg.quote {
  fill: var(--text-color);
  font-size: 56px;
  height: 22px;
  opacity: 0.5;
  stroke-width: 0.08;
  width: 31px;
}
.testimonial .right-quote {
  align-self: end;
}

.title-card {
  align-items: center;
  display: flex;
  justify-content: center;
  position: relative;
}
.home-page-title {
  color: #ffffff;
  font-family: 'Open Sans';
  font-size: 58px;
  font-weight: 300;
  letter-spacing: 1px;
  line-height: 70px;
  text-transform: uppercase;
}
.home-page-subtitle {
  color: #ffffff;
}
button.about-us {
  text-transform: uppercase;
}
.row {
  display: flex;
  width: 100%;
}
.first-column {
  width: 37%;
}
.second-column {
  width: 63%;
}
.home-page.page {
  flex-direction: column;
  height: 100%;
}
.service-cards {
  background-color: #ffffff;
  height: 670px;
  width: 100%;
}

